[gd_scene load_steps=5 format=3 uid="uid://c1pb8rk5fdbbn"]

[ext_resource type="Script" uid="uid://bcsqurv7vihew" path="res://Scripts/test_travel_progress.gd" id="1_87hj8"]
[ext_resource type="Script" uid="uid://cdxpyhip48he1" path="res://Scripts/test_texture_progress_bar.gd" id="2_t6uv5"]
[ext_resource type="Texture2D" uid="uid://x74xpxpp560m" path="res://Assets/Sprites/UIElements/travel_bar_progress.png" id="3_track"]
[ext_resource type="Texture2D" uid="uid://5rab3r8hljkc" path="res://Assets/Sprites/UIElements/travel_bar_over.png" id="4_train"]

[node name="TravelProgressTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_87hj8")

[node name="TravelAnimation" type="Control" parent="."]
anchors_preset = 0
offset_left = 111.0
offset_top = 71.0
offset_right = 585.0
offset_bottom = 111.0
script = ExtResource("2_t6uv5")

[node name="Trasa" type="TextureRect" parent="TravelAnimation"]
layout_mode = 0
offset_right = 474.0
offset_bottom = 40.0
texture = ExtResource("3_track")

[node name="Train" type="TextureRect" parent="TravelAnimation"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_train")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 290.0
offset_top = 141.0
offset_right = 416.0
offset_bottom = 181.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Rozpocznij"

[node name="ResetButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resetuj"

[node name="InfoLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 539.0
offset_top = 88.0
offset_right = 579.0
offset_bottom = 111.0

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_reset_pressed"]
